Display errors message

--- a/src/app/pages/goods-list-form/goods-list-form.component.html
+++ b/src/app/pages/goods-list-form/goods-list-form.component.html
@@ -61,5 +61,8 @@
       Submit
     </button>
 
+    @if (errorMessage) {
+      <div class="invoice-form__error">{{ errorMessage }}</div>
+    }
   </mat-card>
 </form>
