--- a/src/app/pages/summary/summary.component.html
+++ b/src/app/pages/summary/summary.component.html
@@ -16,5 +16,32 @@
       }
     </mat-card>
 
+    <div class="summary__table-wrapper">
+      @if (items.length) {
+        <table mat-table [dataSource]="dataSource" class="summary__table" matSort>
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="count">
+            <th mat-header-cell *matHeaderCellDef>Count</th>
+            <td mat-cell *matCellDef="let element">{{ element.count }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="price">
+            <th mat-header-cell *matHeaderCellDef>Price</th>
+            <td mat-cell *matCellDef="let element">{{ element.price }}</td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+
+        <p class="summary__total">Total: {{ total | number: '1.2-2' }}</p>
+      } @else {
+        <p>No items</p>
+      }
+    </div>
   </div>
 }
